Fixed image galler gap

--- a/src/css/components/image/gallery.css
+++ b/src/css/components/image/gallery.css
@@ -4,7 +4,8 @@
 
 /* @define ImageGallery */
 
-.ImageGallery {
+/* postcss-bem-linter: ignore */
+.ImageGallery.grid {
     --gap: var(--ImageGallery-gap, 20px); /* set the --gap variable that is used by the Cacao grid utility */
 
     gap: var(--gap);
